<resources>

    <string name="kf5_loading">加载中...</string>
    <string name="kf5_no_data">没有更多数据了</string>
    <string name="kf5_pull_to_update">向下拖动进行刷新</string>
    <string name="kf5_release_to_update">松开进行刷新</string>
    <string name="kf5_updating">正在刷新&#8230;</string>
    <string name="kf5_up_update_date">上次刷新 ：%1$s</string>
    <string name="kf5_article_content">文档内容</string>
    <string name="kf5_viewpager_indicator">%1$d/%2$d</string>

    <!-- 录音提示相关 -->
    <string name="kf5_hold_to_speak">按住 说话</string>
    <string name="kf5_release_to_cancel">松开 结束</string>
    <string name="kf5_leave_to_cancel">松开手指，取消发送</string>
    <string name="kf5_slide_to_cancel">手指上滑，取消发送</string>
    <string name="kf5_voice_duration_short">录音时间过短</string>
    <string name="kf5_no_feedback">没有工单反馈信息</string>

    <string name="kf5_rating_content">感谢使用我们的服务,请为此次服务评价:</string>

    <!-- 图片选择相关 -->
    <string name="kf5_action_take_photo">拍摄照片</string>
    <string name="kf5_action_done">完成</string>
    <string name="kf5_photo_all">所有照片</string>
    <string name="kf5_no_camera_hint">没有系统相机</string>
    <string name="kf5_photo_amount_limit_hint">最大图片数量不能超过%1$s张</string>
    <string name="kf5_photo_unit">张</string>
    <string name="kf5_action_select_photo">图片选择</string>


    <!-- help_center -->
    <string name="kf5_contact_us">联系我们</string>
    <string name="kf5_category_list">分区列表</string>
    <string name="kf5_section_list">分类列表</string>
    <string name="kf5_search">搜索</string>
    <string name="kf5_search_hint">请输入搜索内容</string>
    <string name="kf5_article_category">文档分区</string>
    <string name="kf5_article_section">文档分类</string>
    <string name="kf5_article_list">文档列表</string>
    <string name="kf5_content_not_null">内容不能为空</string>


    <!--工单模块-->
    <string name="kf5_feedback_list">反馈列表</string>
    <string name="kf5_send">发送</string>
    <string name="kf5_editcontent_hint">请输入内容…</string>
    <string name="kf5_ticket_closed">该问题已关闭</string>
    <string name="kf5_ticket">工单</string>
    <string name="kf5_message_detail">详细信息</string>
    <string name="kf5_submit">提交</string>
    <string name="kf5_cancel">取消</string>
    <string name="kf5_edittext_hint">请输入问题</string>
    <string name="kf5_feedback">反馈问题</string>
    <string name="kf5_remove">移除</string>
    <string name="kf5_create_ticket_successfully">创建成功</string>
    <string name="kf5_rating_text">请为我们的服务打分：</string>
    <string name="kf5_rating_placeholder">发表意见（选填）</string>
    <string name="kf5_rate">满意度评价</string>
    <string name="kf5_rating_dissatisfied">不满意</string>
    <string name="kf5_rating_not_satisfied">不太满意</string>
    <string name="kf5_rating_so_so">一般</string>
    <string name="kf5_rating_basic_satisfied">基本满意</string>
    <string name="kf5_rating_satisfied">满意</string>

    <string-array name="kf5_rating_status_count_5">
        <item>@string/kf5_rating_dissatisfied</item>
        <item>@string/kf5_rating_not_satisfied</item>
        <item>@string/kf5_rating_so_so</item>
        <item>@string/kf5_rating_basic_satisfied</item>
        <item>@string/kf5_rating_satisfied</item>
    </string-array>

    <string-array name="kf5_rating_status_count_3">
        <item>@string/kf5_rating_dissatisfied</item>
        <item>@string/kf5_rating_so_so</item>
        <item>@string/kf5_rating_satisfied</item>
    </string-array>

    <string-array name="kf5_rating_status_count_2">
        <item>@string/kf5_rating_dissatisfied</item>
        <item>@string/kf5_rating_satisfied</item>
    </string-array>

    <string-array name="kf5_im_rating_status">
        <item>@string/kf5_rating_dissatisfied</item>
        <item>@string/kf5_rating_satisfied</item>
        <item>@string/kf5_rating_not_satisfied</item>
        <item>@string/kf5_rating_so_so</item>
        <item>@string/kf5_rating_basic_satisfied</item>
    </string-array>
    <!--权限相关-->
    <string name="kf5_media_access_hint">访问您设备上的照片、媒体内容和文件</string>
    <string name="kf5_access_recording">录制音频</string>
    <string name="kf5_access_call">拨打电话和管理通话</string>
    <string name="kf5_access_camera">拍摄照片和录制视频</string>

    <!-- IM 相关-->
    <string name="kf5_ai_to_agent">转人工</string>
    <string name="kf5_allocating">正在分配客服…</string>
    <string name="kf5_queue_waiting">排队中…</string>
    <string name="kf5_update_queue_num">您处于排队中的第%1$d位;</string>
    <string name="kf5_no_agent_online">没有客服在线</string>
    <string name="kf5_chat_ended">对话已结束</string>
    <string name="kf5_cancel_queue_successfully">已取消排队</string>
    <string name="kf5_cancel_queue_failed">取消排队失败</string>
    <string name="kf5_no_agent_online_leaving_message">当前没有客服在线,请提交留言。</string>
    <string name="kf5_agent_handle_later_hint">客服将很快处理您反馈的问题</string>

    <string-array name="kf5_ticket_status">
        <item>尚未受理</item>
        <item>受理中</item>
        <item>等待回复</item>
        <item>已解决</item>
        <item>已关闭</item>
    </string-array>


    <string name="kf5_cancel_queue_leave_message_hint">是否取消排队并留言?</string>
    <string name="kf5_leave_message">留言</string>
    <string name="kf5_open">打开</string>
    <string name="kf5_open_file_hint">是否打开文件?</string>
    <string name="kf5_download_file">请下载该文件…</string>
    <string name="kf5_no_file_found_hint">未找到匹配程序</string>
    <string name="kf5_file_downloaded">文件已下载…</string>
    <string name="kf5_download_file_hint">是否下载该文件?</string>
    <string name="kf5_download">下载</string>
    <string name="kf5_start_to_download">开始下载…</string>
    <string name="kf5_resend_message_hint">是否重发该消息?</string>
    <string name="kf5_resend">重发</string>
    <string name="kf5_copy_text_hint">是否复制文本?</string>
    <string name="kf5_copy">复制</string>
    <string name="kf5_copied">已复制</string>
    <string name="kf5_not_connected">未连接</string>
    <string name="kf5_rating_failed">评价失败</string>
    <string name="kf5_rating_successfully">感谢您的评价</string>
    <string name="kf5_confirm">确定</string>
    <string name="kf5_get_auth_hint">是否进入设置界面授予%1$d必要权限？否则无法正常使用。</string>
    <string name="kf5_display_error_hint">显示错误</string>
    <string name="kf5_image_error">图片错误</string>
    <string name="kf5_send_email_hint">是否发送邮件?</string>
    <string name="kf5_make_call_hint">是否拨打电话?</string>
    <string name="kf5_no_internet">网络未连接，请检查网络</string>
    <string name="kf5_from_camera">相机</string>
    <string name="kf5_from_gallery">相册</string>
    <string name="kf5_file_limit_hint">文件数不能超过6个</string>
    <string name="kf5_delete_file_hint">是否删除当前文件?</string>
    <string name="kf5_delete">删除</string>
    <string name="kf5_input_some_text">请输入一段文字描述您的问题</string>
    <string name="kf5_satisfied">满意</string>
    <string name="kf5_unsatisfied">不满意</string>
    <string name="kf5_reminder">温馨提示</string>
    <string name="kf5_unknown_error">未知错误</string>
    <string name="kf5_invite_video_chat">客服邀请您进行视频聊天</string>
    <string name="kf5_robot_found_answers">为您找到以下内容:</string>
    <string name="kf5_update_queue">您已进入排队;</string>
    <string name="kf5_chat">聊天</string>
    <string name="kf5_not_in_service_time">不在服务时间，请提交留言。</string>
    <string name="kf5_queue_error_leave_msg">排队失败，请提交留言。</string>
    <string name="kf5_queue_too_long">当前服务高峰，请提交留言。</string>
    <string name="kf5_queue_error">排队失败</string>
</resources>
