<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kf5.sdk.ticket.ui.RatingActivity">

    <RelativeLayout
        android:id="@+id/kf5_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kf5_title_bar_bg">

        <ImageView
            android:id="@+id/kf5_return_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/kf5_back_img_bg"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/kf5_right_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/kf5_dimen_12dp"
            android:layout_marginRight="@dimen/kf5_dimen_12dp"
            android:gravity="center"
            android:padding="@dimen/kf5_dimen_4dp"
            android:text="@string/kf5_submit"
            android:textColor="@drawable/kf5_text_bg"
            android:textSize="@dimen/kf5_text_xh_size"/>

        <TextView
            android:id="@+id/kf5_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/kf5_rate"
            android:textColor="@android:color/white"
            android:textSize="@dimen/kf5_text_xxh_size"/>
    </RelativeLayout>


    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:focusableInTouchMode="true"
                      android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/kf5_dimen_12dp"
                android:text="@string/kf5_rating_text"
                android:textSize="@dimen/kf5_text_size_20"/>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/kf5_line_1dp"
                  android:background="@color/kf5_line_deliver_color"/>

            <com.kf5.sdk.ticket.widgets.NoScrollListView
                android:id="@+id/kf5_rating_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:listSelector="@null"/>

            <EditText
                android:id="@+id/kf5_rating_comment"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="@dimen/kf5_dimen_8dp"
                android:background="@drawable/kf5_edittext_bg"
                android:gravity="top|start|left"
                android:hint="@string/kf5_rating_placeholder"
                android:padding="@dimen/kf5_dimen_6dp"
                android:textSize="@dimen/kf5_text_size_18"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
